--- a/text-Animation.html
+++ b/text-Animation.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Pinyon+Script|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="test.css" />
-    <title>Ulrich-Nelson-Animation</title>
+    <link rel="stylesheet" href="text.Animation.css" />
+    <title>text-Animation</title>
 </head>
 
 <body>
